--- a/JamesWebApp/Views/TimeClocks/Create.cshtml
+++ b/JamesWebApp/Views/TimeClocks/Create.cshtml
@@ -29,6 +29,13 @@
                 <span asp-validation-for="EndTime" class="text-danger"></span>
             </div>
             <div class="form-group">
+                @*<label asp-for="TimeWorked" class="control-label"></label>
+                <input asp-for="TimeWorked" class="form-control" />
+                @*I dont want the user to be able to edit timeworked directly*@
+                @*<p>@Model.TimeWorked</p>*@
+                <span asp-validation-for="TimeWorked" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
