--- a/JamesWebApp/Views/TimeClocks/Details.cshtml
+++ b/JamesWebApp/Views/TimeClocks/Details.cshtml
@@ -29,6 +29,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.EndTime)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.TimeWorked)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TimeWorked)
+        </dd>
     </dl>
 </div>
 <div>
