--- a/JamesWebApp/Views/Shared/_Layout.cshtml
+++ b/JamesWebApp/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="TimeClocks" asp-action="Index">TimeClock</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="TimeOffs" asp-action="Index">TimeOff</a>
+                            </li>
                         }
                     </ul>
                     <partial name="_LoginPartial" />
