Commented on the List feature in the AspNetUsersController, also edited the layout to show the Users account.

--- a/JamesWebApp/Views/Shared/_Layout.cshtml
+++ b/JamesWebApp/Views/Shared/_Layout.cshtml
@@ -32,7 +32,10 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="TimeClocks" asp-action="Index">TimeClock</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="TimeOffs" asp-action="Index">TimeOff</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="TimeOffs" asp-action="Index">Time Off</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="AspNetUsers" asp-controller="Index">Account</a>
                             </li>
                         }
                     </ul>
