--- a/JamesWebApp/Views/TimeOffs/Index.cshtml
+++ b/JamesWebApp/Views/TimeOffs/Index.cshtml
@@ -32,29 +32,30 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.UserName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PaidTimeOff)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateOne)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DateTwo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Vacation)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.UserName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.PaidTimeOff)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateOne)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateTwo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Vacation)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
