--- a/JamesWebApp/Views/TimeClocks/Create.cshtml
+++ b/JamesWebApp/Views/TimeClocks/Create.cshtml
@@ -5,43 +5,27 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>TimeClock</h4>
+<h1>TimeClock</h1>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="UserName" class="control-label"></label>
                 <input asp-for="UserName" class="form-control" />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
 
 
-            <div class="form-group">
+            <div class="form-group mb-3">
                 <label asp-for="StartTime" class="control-label"></label>
                 <input asp-for="StartTime" class="form-control" />
                 <span asp-validation-for="StartTime" class="text-danger"></span>
             </div>
 
-
-            <div class="form-group">
-                <label asp-for="EndTime" class="control-label"></label>
-                <input asp-for="EndTime" class="form-control" />
-                <span asp-validation-for="EndTime" class="text-danger"></span>
-            </div>
-
-            <div class="form-group">
-                @*<label asp-for="TimeWorked" class="control-label"></label>
-                <input asp-for="TimeWorked" class="form-control" />
-                @*I dont want the user to be able to edit timeworked directly*@
-                @*<p>@Model.TimeWorked</p>*@
-                <span asp-validation-for="TimeWorked" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group mb-3">
+                <input type="submit" value="Clock In" class="btn btn-primary" />
             </div>
         </form>
     </div>
