--- a/JamesWebApp/Views/TimeClocks/Index.cshtml
+++ b/JamesWebApp/Views/TimeClocks/Index.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Work Log</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -44,7 +44,7 @@
                 @Html.DisplayFor(modelItem => item.TimeWorked)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Clock Out</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
