--- a/JamesWebApp/Views/TimeClocks/Edit.cshtml
+++ b/JamesWebApp/Views/TimeClocks/Edit.cshtml
@@ -14,12 +14,12 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group mb-3">
                 <label asp-for="UserName" class="control-label"></label>
-                <input asp-for="UserName" class="form-control" />
+                <input asp-for="UserName" class="form-control" readonly />
                 <span asp-validation-for="UserName" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
                 <label asp-for="StartTime" class="control-label"></label>
-                <input asp-for="StartTime" class="form-control" />
+                <input asp-for="StartTime" class="form-control" readonly />
                 <span asp-validation-for="StartTime" class="text-danger"></span>
             </div>
             <div class="form-group mb-3">
