created ErrorLogger Class, edited controllers as well as views

--- a/JamesWebApp/Views/Home/Index.cshtml
+++ b/JamesWebApp/Views/Home/Index.cshtml
@@ -3,6 +3,9 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome To TimeDeck</h1>
+    <p>
+        An example of a simple yet informative way for employees to keep track
+        of their hours worked, PTO time left, and personal settings on account.
+    </p>
 </div>
