--- a/JamesWebApp/Views/Home/Privacy.cshtml
+++ b/JamesWebApp/Views/Home/Privacy.cshtml
@@ -4,3 +4,4 @@
 <h1>@ViewData["Title"]</h1>
 
 <p>Use this page to detail your site's privacy policy.</p>
+<p>Policy will be updated In the near future!!</p>
