Created a feature list, and added comments.

--- a/JamesWebApp/Views/Home/Index.cshtml
+++ b/JamesWebApp/Views/Home/Index.cshtml
@@ -8,4 +8,19 @@
         An example of a simple yet informative way for employees to keep track
         of their hours worked, PTO time left, and personal settings on account.
     </p>
+    <h3>Feature list</h3>
+    <ul>
+        <li>
+            Created a Regular Expression Regex In my AspNetUser model.
+        </li> 
+        <li>
+            Created a list in my AspNetUsers Controller.
+        </li>
+        <li>
+            Created my ErrorLog() class which writes Exceptions to a text file.
+        </li>
+        <li>
+            Created comments explaining how the current Web App uses as least 2 of the solid principles.
+        </li>
+    </ul>
 </div>
