--- a/JamesWebApp/Views/AspNetUsers/Index.cshtml
+++ b/JamesWebApp/Views/AspNetUsers/Index.cshtml
@@ -8,7 +8,7 @@
 <h1>Account Information</h1>
 @*The Create is for employer/manager*@
 <p>
-    <a class="btn btn-primary" asp-action="Create">Create New</a>
+    <a class="btn btn-primary" asp-action="Create">Create New User</a>
 </p>
 <table class="table">
     <thead>
